<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.smartnote.MainActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/chm101"
        style="@style/coursesListStyle"
        android:text="@string/chm101"/>
    <TextView
        android:id="@+id/chm102"
        style="@style/coursesListStyle"
        android:text="@string/chm102"/>
    <TextView
        android:id="@+id/phy101"
        style="@style/coursesListStyle"
        android:text="@string/phy101"/>
    <TextView
        android:id="@+id/phy102"
        style="@style/coursesListStyle"
        android:text="@string/phy102"/>
    <TextView
        android:id="@+id/mth101"
        style="@style/coursesListStyle"
        android:text="@string/mth101"/>
    <TextView
        android:id="@+id/mth102"
        style="@style/coursesListStyle"
        android:text="@string/mth102"/>
    <TextView
        android:id="@+id/mth201"
        style="@style/coursesListStyle"
        android:text="@string/mth201"/>
    <TextView
        android:id="@+id/mth202"
        style="@style/coursesListStyle"
        android:text="@string/mth202"/>
    <TextView
        android:id="@+id/csc201"
        style="@style/coursesListStyle"
        android:text="@string/csc201"/>

</LinearLayout>
